test/langtools/tools/javac/records/RecordDeclarationSyntaxTest.out
RecordDeclarationSyntaxTest.java:9:13: compiler.err.expected: '('
RecordDeclarationSyntaxTest.java:9:14: compiler.err.illegal.start.of.type
2 errors
